fix: blend mode not visible on chrome

--- a/src/components/UI/organisms/Hero/Hero.module.scss
+++ b/src/components/UI/organisms/Hero/Hero.module.scss
@@ -8,10 +8,14 @@
 
     height: 100vh;
     margin-bottom: 100vh;
+
+    background-color: $base-white;
 }
 
 .title
 {
+    position: relative;
+
     overflow: hidden;
 
     width: 100%;
@@ -27,8 +31,7 @@
 .wordWrapper
 {
     font-weight: $font-semibold;
-
-    position: relative;
+    // position: relative;
 
     display: inline-block;
     overflow: hidden;
@@ -36,6 +39,8 @@
     height: 4rem;
 
     text-transform: uppercase;
+
+    // background-color: black;
 
     &:nth-of-type(1)
     {
@@ -52,21 +57,6 @@
     display: block;
 }
 
-.circle
-{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-
-    width: 100px;
-    height: 100px;
-
-    circle
-    {
-        fill: $base-black;
-    }
-}
-
 .spheresContainer
 {
     position: absolute;
@@ -80,7 +70,7 @@
 .canvas
 {
     position: absolute;
-    z-index: -1;
+    z-index: 0;
     top: 0;
 
     overflow: hidden;
